<resources>
    <string name="hisens_app_name">硬汉邦</string>
    <string name="app_version">V0.0.1</string>
    <string name="login_appname">WELCOME!
     登录</string>
    <string name="current_measurement">我的监测</string>
    <string name="intervene_state">干预状态</string>
    <string name="intervene_state_hint_daytime">您此次测量为白天，医生需要根据您夜间20:00~08:00期间监测的数据才能为您进行准确诊断。</string>
    <string name="intervene_state_hint">您此次测量受到了药物、外界影响，请重新测量或联系医生为您进行诊断分析。</string>
    <string name="npt_state">夜间阴茎勃起(NPT)状态</string>
    <string name="npt_state_hint_less_8h">请确保20:00~08:00期间，睡眠时长大于8小时，医生才能获取较准确的数据进行判断。</string>
    <string name="npt_state_hint">坚持连续测量三晚有助于医生准确给出诊断，测量后患者即可向医生获取诊断结果。</string>
    <string name="invalid_erection_state">无效勃起状态</string>
    <string name="result_prediction_hint">当前结果今供参考，不能作为最终诊断结果，请联系医生进行确诊。</string>
    <string name="result_prediction_hint_less_8h">您睡眠时间小于8小时，无法推断NPT结果，医生难以准确诊断。</string>
    <string name="npt_hint">仅NPT参考结果，请联系医生进行确诊</string>
    <string name="less_than_8h_hint">您睡眠时间不足8小时难以准确诊断</string>
    <string name="daytime_hint">此次测量时间非夜间，医生难以准确分析哦~</string>
    <string name="intervention_factor">干预因素</string>
    <string name="not_night_measurement">非夜间测量</string>
    <string name="night_hint">此次测量受到了药物、外界因素等影响</string>
    <string name="my_monitor">我的监测</string>
    <string name="today">今天</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="this_measurement_state">本次测量状态</string>
    <string name="intervene_factor">干预因素</string>
    <string name="result_prediction">结果预测</string>
    <string name="data_details">数据详情</string>
    <string name="npt_prediction">NPT预测</string>
    <string name="historic_record">历史记录</string>
    <string name="npt_historic_record">夜间阴茎勃起(NPT)历史记录</string>
    <string name="npt_historic_record_hint">(夜间20:00~08:00无标记正常睡眠数据)</string>
    <string name="intervene_historic_record">干预状态历史记录</string>
    <string name="intervene_historic_record_hint">(白天08:00~20:00和夜间有标记数据)</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="month_unit">个月</string>
    <string name="no_data">暂时没有数据</string>
    <string name="count">次</string>
    <string name="max_erectile_count_with_unit">勃起强度峰值(g)</string>
    <string name="circumference_variation">时间(min)</string>
    <string name="erectile_count_with_unit">勃起次数(次)</string>
    <string name="erectile_count">勃起次数</string>
    <string name="persistent_period_avg_daily">日均持续时间(min/次)</string>
    <string name="persistent_period_avg">平均持续时间</string>
    <string name="composite_index">综合指数</string>
    <string name="erect_strength_avg_daily">日均勃起强度(g/次)</string>
    <string name="erectile_strength_avg">平均勃起强度</string>
    <string name="circumference_avg_daily">日均周径变化(%/次)</string>
    <string name="phentolamine">酚妥拉明</string>
    <string name="apomorphine">脱水吗啡</string>
    <string name="wuzi_yanzong_pills">五子衍宗丸</string>
    <string name="av_video">观看AV</string>
    <string name="score">分</string>
    <string name="assess_time">测分时间：</string>
    <string name="no_assessment_hint">请先完成测分，有助于结果分析</string>
    <string name="normal_assessment_hint">当前评分正常，可佩带Hiensor进行详细监测</string>
    <string name="exception_assessment_hint">建议您佩戴Hiensor配合医生在线监测治疗</string>
    <string name="organic_ed">器质性ED</string>
    <string name="psychic_ed">心理性ED</string>
    <string name="very_good">非常棒</string>
    <string name="title_intelligent_assistant">智能助手</string>
    <string name="health_records">健康档案</string>
    <string name="not_filled">未填写</string>
    <string name="edit">编辑</string>
    <string name="health_records_hint">信息仅供主治医生查看，有助于医生进行病症分析，请认真填写：</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="height_union">cm</string>
    <string name="weight">体重</string>
    <string name="weight_union">kg</string>
    <string name="sexual_and_fertility">性生活与生育状态</string>
    <string name="smoking_history">吸烟史</string>
    <string name="drinking_history">饮酒史</string>
    <string name="medication_history">服药史</string>
    <string name="name_hint">2&#8211;15个字符(中文、字母)</string>
    <string name="required">必选</string>
    <string name="have_sexual">有性生活</string>
    <string name="have_not_sexual">无性生活</string>
    <string name="have_fertility">有生育</string>
    <string name="have_not_fertility">无生育</string>
    <string name="hypertension">高血压</string>
    <string name="diabetes">糖尿病</string>
    <string name="heart_disease">心脏病</string>
    <string name="prostate_disease">前列腺疾病</string>
    <string name="hyperlipidemia">高脂血症</string>
    <string name="sleep_disorders">睡眠障碍</string>
    <string name="penisdeformity">阴茎畸形</string>
    <string name="penile_induration">阴茎硬结</string>
    <string name="hypogonadism">性腺功能低下</string>
    <string name="hepatic_insufficiency">肝肾功能不全</string>
    <string name="multiple_sclerosis">多发性肝硬化</string>
    <string name="metabolic_syndrome">代谢综合症</string>
    <string name="encephalatrophy">脑萎缩</string>
    <string name="thyroid_thyroid">甲状腺异常</string>
    <string name="concomitant_disease_hint">可补充你伴随的其他疾病</string>
    <string name="depression">抑郁症</string>
    <string name="spinal_cord_injury">脊髓损伤</string>
    <string name="brain_trauma">脑外伤</string>
    <string name="genital_trauma">生殖器创伤</string>
    <string name="urethra_operation">尿道手术</string>
    <string name="prostate_operation">前列腺手术</string>
    <string name="pelvic_trauma">盆骨创伤</string>
    <string name="sympathetic_nerve_resection">交感神经切除</string>
    <string name="pelvic_viscera_operation">盆腔脏器手术</string>
    <string name="pelvic_reflection_treatment">盆腔反射治疗</string>
    <string name="retroperitoneal_lymph_node_cleaning">腹膜后淋巴清扫</string>
    <string name="surgery_or_trauma_hint">可补充你其他手术和外伤情况</string>
    <string name="dramamine">茶苯海明</string>
    <string name="naproxen">甲氧萘丙酸</string>
    <string name="disopyramide">吡二丙胺</string>
    <string name="furosemide">呋塞米</string>
    <string name="flutamide">氟他米特</string>
    <string name="hydrochlorothiazide">氢氯噻嗪</string>
    <string name="enalapril">恩纳普利</string>
    <string name="amoxicilli">阿莫西平</string>
    <string name="medication_history_hint">可补充你其他服药历史</string>
    <string name="never">从不</string>
    <string name="occasionally">偶尔</string>
    <string name="often">经常</string>
    <string name="everyday">每天</string>
    <string name="sync_completed_with_drawable">√同步成功</string>
    <string name="mark_measurement_state">选择干预因素</string>
    <string name="mark_measurement_state_hint">（是否服用药物或受到外界影响等）</string>
    <string name="is_sleep">是否睡眠</string>
    <string name="nothing">无</string>
    <string name="sildenafil">西地那非</string>
    <string name="vardenafil">伐地那非</string>
    <string name="tadalafil">他达拉非</string>
    <string name="masturbation">手淫</string>
    <string name="sexual_stimulus">性刺激</string>
    <string name="other">其它</string>
    <string name="others_hint">可补充其他干预因素</string>
    <string name="dialog_cancel">取消</string>
    <string name="l_confirm">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="dialog_year">@string/year</string>
    <string name="dialog_month">@string/month</string>
    <string name="dialog_day">@string/day</string>
    <string name="dialog_hour_simple">时</string>
    <string name="dialog_minute_simple">分</string>
    <string name="l_test_in_sleep">睡眠时监测</string>
    <string name="l_test_in_sober">清醒时监测</string>
    <string name="about_us_content">硬汉邦（患者版）——是一款专注男性阴茎勃起功能监测（简称ED）的专业移动医疗软件。该软件由顶级医生专家团队倾力打造，集疾病快速监测分析、名医全程跟踪治疗诊断与一体，快速进行医患数据化沟通，让治疗更精准高效，让患者早日康复！</string>
    <string name="telephone">客服热线</string>
    <string name="phone_number">0755-33158961</string>
    <string name="protocol">硬汉邦服务条款及协议</string>
    <string name="copyright">Copyright @2017</string>
    <string name="question_and_suggestion">问题和意见</string>
    <string name="please_write_your_question">请输入您的问题描述以便我们提供更好的帮助</string>
    <string name="contact_telephone">联系电话：</string>
    <string name="feedBack_telephone_hint">选填，便于我们与您联系</string>
    <string name="submit">提交</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_success_tips">感谢您对硬汉邦L的关注与支持，我们会认真处理您的反馈，尽快修复和完善相关功能。</string>
    <string name="close">关闭</string>
    <string name="battery">电量</string>
    <string name="data_syncing">同步数据中，请稍后...</string>
    <string name="data_sync_success">同步成功</string>
    <string name="connecting">连接中</string>
    <string name="message_waiting_connection">正在连接，请稍后...</string>
    <string name="message_connect_success">连接成功</string>
    <string name="no_latest_data">无最新数据</string>
    <string name="sync_failed">同步失败</string>
    <string name="disconnected1_hint">确认手机蓝牙已开启,确保底座连接USB</string>
    <string name="not_found_device_details">未发现Hiensor,请确保Hiensor通电并且在手机附近</string>
    <string name="go_setting_openblue">请前往手机“设置”中打开蓝牙</string>
    <string name="connected">已连接</string>
    <string name="searching_device">正在查找设备</string>
    <string name="near_to_phone">请将手机放置设备附件</string>
    <string name="search_success">查找完成</string>
    <string name="please_select_connect_device">请选择你要连接的设备</string>
    <string name="re_search">重新搜索</string>
    <string name="connected_fail">连接不成功</string>
    <string name="dis_connected">无法连接,请尝试重启蓝牙</string>
    <string name="label_monitor">监测</string>
    <string name="my_report">我的报告</string>
    <string name="my_record">我的档案</string>
    <string name="ehs_score">EHS评分</string>
    <string name="title_my_doctors">我的医生</string>
    <string name="label_doctor">医生</string>
    <string name="label_helper">客服</string>
    <string name="iief_5_score">IIEF-5评分</string>
    <string name="intelligent_assistant">客服助手</string>
    <string name="recommentions">热门推荐</string>
    <string name="current_consultation">当前问诊</string>
    <string name="the_man_circle">男人圈</string>
    <string name="taking_picture">拍照</string>
    <string name="gallery">手机相册</string>
    <string name="cancel">取消</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="save">保存</string>
    <string name="modify_nickname_hint">2&#8211;15个字符(中文、字母、数字、下划线)</string>
    <string name="hint_input_name">请输入您的姓名</string>
    <string name="hint_select_age">请选择您的出生日期</string>
    <string name="hint_select_height">请选择您的身高</string>
    <string name="hint_select_weight">请选择您的体重</string>
    <string name="hint_select_time">请选择时间</string>
    <string name="hint_select_disease">请选择您伴随的疾病</string>
    <string name="hint_select_operation_history">请选择您的手术史/外伤史</string>
    <string name="hint_select_medicine_history">请选择您的服药史</string>
    <string name="subtitle_marriage_birth_status">婚姻与生育状况</string>
    <string name="label_marriage_status">婚姻状况</string>
    <string name="label_birth_status">生育状况</string>
    <string name="subtitle_3m_sexual_life">过去3-6月性生活概况</string>
    <string name="label_sexual_life_status">性生活状况</string>
    <string name="label_morning_wood_status">晨勃状况</string>
    <string name="label_under_no_sexual">勃起功能障碍</string>
    <string name="st_ed_time">性障碍状况持续时长</string>
    <string name="l_sick_time">病程持续时间</string>
    <string name="st_other_factors">其他影响因素</string>
    <string name="l_concomitant_disease">伴随疾病</string>
    <string name="l_operation_or_trauma">手术/外伤</string>
    <string name="l_smoke_history">吸烟史</string>
    <string name="l_drink_history">饮酒史</string>
    <string name="l_medicine_history">服药史</string>
    <string name="l_others">其他</string>
    <string name="hint_customize">自定义症状</string>
    <string name="l_complete">完成</string>
    <string name="hint_length_limit">自定义症状最多支持10个字</string>
    <string name="l_antihypertensive_drugs">抗高血压药</string>
    <string name="l_antiandrogen">抗雄激素药</string>
    <string name="l_antidepressants">抗抑郁或精神类药</string>
    <string name="l_recreational_drug">消遣性药</string>
</resources>