<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="305dp"
    android:layout_height="410dp"
    android:fitsSystemWindows="true"
    android:background="@drawable/tips_shape"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x25"
                android:background="@drawable/home_icon_avss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x21"
                android:text="干预模式(AVSS)"
                android:textColor="#333333"
                android:textSize="@dimen/x20"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x5"
                android:text="需满足以下条件，否则影响医生诊断"
                android:textColor="#999999"
                android:textSize="@dimen/x11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x20"
                android:drawableLeft="@drawable/home_icon_gou"
                android:drawablePadding="@dimen/x7"
                android:text="佩戴时间>=1小时（注射情况》=15min）"
                android:textColor="#666666"
                android:textSize="@dimen/x13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x23"
                android:layout_marginTop="@dimen/x7"
                android:drawableLeft="@drawable/home_icon_gou"
                android:drawablePadding="@dimen/x7"
                android:text="选择你所受到的干扰因素（必选):"
                android:textColor="#666666"
                android:textSize="@dimen/x13" />


            <LinearLayout
                android:id="@+id/ly_common_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x15">

                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox1"
                    android:text="@string/sildenafil" />

                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox2"
                    android:text="@string/phentolamine" />

                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox3"
                    android:text="@string/av_video" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_common_marks2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox4"
                    android:text="@string/masturbation" />

                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox5"
                    android:text="@string/sexual_stimulus" />

                <CheckBox
                    style="@style/CheckBoxTheme"
                    android:id="@+id/checkbox6"
                    android:text="@string/other" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="@dimen/x155"
                android:layout_height="@dimen/x34"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginTop="@dimen/x20"
                android:background="@drawable/btn_getverification_code_uninput_shape"
                android:gravity="center"
                android:text="确认"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>